Make an ESM build so FracturedJson can work inside Firefox

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ci": "npm run build && npm run lint:ext && npm run package"
   },
   "devDependencies": {
+    "esbuild": "^0.27.2",
     "fracturedjsonjs": "^5.0.1",
     "prismjs": "^1.29.0",
     "web-ext": "^9.2.0"
