--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,7 @@
   },
   "browser_action": {
     "default_title": "Fractured JSON Viewer (click to toggle)",
+    "default_popup": "popup/popup.html",
     "default_icon": {
       "16": "icons/icon-16.png",
       "32": "icons/icon-32.png",
