--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "ci": "npm run build && npm run lint:ext && npm run package",
     "bump:patch": "node scripts/bump-version.mjs patch",
     "bump:minor": "node scripts/bump-version.mjs minor",
-    "bump:major": "node scripts/bump-version.mjs major"
+    "bump:major": "node scripts/bump-version.mjs major",
+    "sign:unlisted": "web-ext sign --source-dir dist --artifacts-dir artifacts-signed --channel unlisted"
   },
   "devDependencies": {
     "esbuild": "^0.27.2",
