--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,12 @@
       "background.js"
     ]
   },
+  "default_icon": {
+    "16": "icons/icon-16.png",
+    "32": "icons/icon-32.png",
+    "48": "icons/icon-48.png",
+    "96": "icons/icon-96.png"
+  },
   "browser_action": {
     "default_title": "Fractured JSON Viewer (click to toggle)",
     "default_popup": "popup/popup.html",
