--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "manifest_version": 2,
   "name": "Fractured JSON Link Viewer",
   "version": "0.4.3",
-  "description": "Formats JSON navigations using FracturedJsonJs with highlighting + virtualized tree.",
   "license": "MIT",
+  "description": "Formats JSON navigations using FracturedJsonJs with highlighting + virtualized tree.",
   "permissions": [
     "webRequest",
     "webRequestBlocking",
@@ -15,9 +15,7 @@
       "background.js"
     ]
   },
-  "default_icon": {
-    "16": "icons/icon-16.png",
-    "32": "icons/icon-32.png",
+  "icons": {
     "48": "icons/icon-48.png",
     "96": "icons/icon-96.png"
   },
